--- a/strncpy.vcproj
+++ b/strncpy.vcproj
@@ -169,6 +169,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\strncpy_s_custom.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
@@ -194,6 +198,10 @@
 						XMLDocumentationFileName="$(IntDir)\"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\strncpy_s_wine.c"
+				>
 			</File>
 		</Filter>
 	</Files>
