Add V8 strncpy_s() implementation.

--- a/strncpy.vcproj
+++ b/strncpy.vcproj
@@ -209,6 +209,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\strncpy_s_v8.c"
+				>
+			</File>
+			<File
 				RelativePath=".\strncpy_s_wine.c"
 				>
 			</File>
